[tool.poetry]
name = "traceify"
version = "0.1.0"
description = "simple application tracker"
authors = ["mavhungutrezzy <mavhungutrezzy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.2"
isort = "^5.10.1"
black = "^22.8.0"
mypy = "^0.971"
safety = "^2.1.1"
bandit = "^1.7.4"
flake8 = "^5.0.4"
dotenv = "^0.0.5"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
careerjet-api-client = "^3.0.1"
dj-database-url = "^1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
